--- a/test-output/index.html
+++ b/test-output/index.html
@@ -102,7 +102,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.API_Testing.TestScripts.TC_02_GetRequest" class="method navigator-link" hash-for-method="getData">getData</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.API_Testing.TestScripts.TC_03_DeleteRequestData" class="method navigator-link" hash-for-method="deleteData">deleteData</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -120,14 +120,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.API_Testing.TestScripts.TC_02_GetRequest</span>
+              <span class="class-name">com.API_Testing.TestScripts.TC_03_DeleteRequestData</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="getData">
-                  </a> <!-- getData -->
-                  <span class="method-name">getData</span>
+                  <a name="deleteData">
+                  </a> <!-- deleteData -->
+                  <span class="method-name">deleteData</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -135,7 +135,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">/private/var/folders/dw/j_j800013s90g705ys88vvk80000gn/T/testng-eclipse--413641344/testng-customsuite.xml</span>
+            <span class="header-content">/private/var/folders/dw/j_j800013s90g705ys88vvk80000gn/T/testng-eclipse--962442705/testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -144,7 +144,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.API_Testing.TestScripts.TC_02_GetRequest&quot;/&gt;
+      &lt;class name=&quot;com.API_Testing.TestScripts.TC_03_DeleteRequestData&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -186,9 +186,9 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'getData')
-data.setCell(0, 2, 'com.API_Testing.TestScripts.TC_02_GetRequest')
-data.setCell(0, 3, 1784);
+data.setCell(0, 1, 'deleteData')
+data.setCell(0, 2, 'com.API_Testing.TestScripts.TC_03_DeleteRequestData')
+data.setCell(0, 3, 1942);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
@@ -219,9 +219,9 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.API_Testing.TestScripts.TC_02_GetRequest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.API_Testing.TestScripts.TC_03_DeleteRequestData</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">getData</span>
+                <span class="method-name">deleteData</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
