--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,6 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7bddad">  <td>19/10/02 02:04:25</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_02_GetRequest.getData()[pri:0, instance:com.API_Testing.TestScripts.TC_02_GetRequest@574b560f]">getData</td> 
+<tr bgcolor="7bddad">  <td>19/10/02 02:33:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_03_DeleteRequestData.deleteData()[pri:0, instance:com.API_Testing.TestScripts.TC_03_DeleteRequestData@574b560f]">deleteData</td> 
   <td>main@302977067</td>   <td></td> </tr>
 </table>
