--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,13 +8,11 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="7">Suite</th></tr>
-<tr><td><a href="#t0">Test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">2,548</td><td></td><td></td></tr>
+<tr><th colspan="7">Default suite</th></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">2,286</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.API_Testing.TestScripts.TC_01_PostRequest</td><td><a href="#m0">createData</a></td><td rowspan="1">1569964215786</td><td rowspan="1">74</td></tr><tr class="passedodd"><td rowspan="1">com.API_Testing.TestScripts.TC_02_GetRequest</td><td><a href="#m1">getData</a></td><td rowspan="1">1569964213389</td><td rowspan="1">2392</td></tr><tr class="passedeven"><td rowspan="1">com.API_Testing.TestScripts.TC_03_DeleteRequestData</td><td><a href="#m2">deleteData</a></td><td rowspan="1">1569964215862</td><td rowspan="1">31</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.API_Testing.TestScripts.TC_03_PUTRequest</td><td><a href="#m0">updateRecord</a></td><td rowspan="1">1570367041942</td><td rowspan="1">2249</td></tr></tbody>
 </table>
-<h2>Test</h2><h3 id="m0">com.API_Testing.TestScripts.TC_01_PostRequest#createData</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.API_Testing.TestScripts.TC_02_GetRequest#getData</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">com.API_Testing.TestScripts.TC_03_DeleteRequestData#deleteData</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">com.API_Testing.TestScripts.TC_03_PUTRequest#updateRecord</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
