--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\Sumit chaudhary\AppData\Local\Temp\testng-eclipse-1240666428\testng-customsuite.xml</span>
+                    <span>testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">2 methods,   2 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,7 +102,12 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.API_Testing.TestScripts.TC_01_PostRequest" hash-for-method="createData">createData</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.API_Testing.TestScripts.TC_04_DeleteRequestData" hash-for-method="createData">createData</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.API_Testing.TestScripts.TC_04_DeleteRequestData" hash-for-method="deleteData">deleteData</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -120,7 +125,7 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.API_Testing.TestScripts.TC_01_PostRequest</span>
+              <span class="class-name">com.API_Testing.TestScripts.TC_04_DeleteRequestData</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
@@ -130,12 +135,19 @@
                   <span class="method-name">createData</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="deleteData">
+                  </a> <!-- deleteData -->
+                  <span class="method-name">deleteData</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-Default_suite-class-passed -->
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Sumit chaudhary\AppData\Local\Temp\testng-eclipse-1240666428\testng-customsuite.xml</span>
+            <span class="header-content">/private/var/folders/y_/rgtbzvcx4hnd93q7drh09t3r0000gn/T/testng-eclipse-581624985/testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -144,7 +156,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test thread-count=&quot;5&quot; verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.API_Testing.TestScripts.TC_01_PostRequest&quot;/&gt;
+      &lt;class name=&quot;com.API_Testing.TestScripts.TC_04_DeleteRequestData&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -184,16 +196,20 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(2);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'createData')
-data.setCell(0, 2, 'com.API_Testing.TestScripts.TC_01_PostRequest')
-data.setCell(0, 3, 7609);
+data.setCell(0, 2, 'com.API_Testing.TestScripts.TC_04_DeleteRequestData')
+data.setCell(0, 3, 2473);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'deleteData')
+data.setCell(1, 2, 'com.API_Testing.TestScripts.TC_04_DeleteRequestData')
+data.setCell(1, 3, 80);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 7 seconds</span>
+              <span class="suite-total-time">Total running time: 2 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -219,10 +235,14 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.API_Testing.TestScripts.TC_01_PostRequest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.API_Testing.TestScripts.TC_04_DeleteRequestData</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">createData</span>
                 <span class="method-start">0 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">deleteData</span>
+                <span class="method-start">2476 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
