--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,11 +4,15 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.API_Testing.TestScripts.TC_01_PostRequest</td>
+<td>com.API_Testing.TestScripts.TC_04_DeleteRequestData</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
+<tr>
+<td>&nbsp;</td>
+<td>deleteData</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
 <td>createData</td>
