--- a/APITestReport/old/Suite/classes.html
+++ b/APITestReport/old/Suite/classes.html
@@ -4,6 +4,28 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
+<td>com.API_Testing.TestCasesScripts.TC_07_GetDatabyKey</td>
+<td>&nbsp;</td><td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@Test</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>fetchValuedata</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@BeforeClass</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterClass</td>
+</tr>
+<tr>
 <td>com.API_Testing.TestCasesScripts.TC_04_PatchRequest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
@@ -88,28 +110,6 @@
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
 <tr>
-<td>com.API_Testing.TestCasesScripts.TC_08_GetDatabyKey</td>
-<td>&nbsp;</td><td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@Test</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>fetchValuedata</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@BeforeClass</td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@BeforeMethod</td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@AfterMethod</td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@AfterClass</td>
-</tr>
-<tr>
 <td>com.API_Testing.TestCasesScripts.TC_05_DeleteRequestData</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
@@ -160,7 +160,7 @@
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
 <tr>
-<td>com.API_Testing.TestCasesScripts.TC_09CompareJSonTwoFile</td>
+<td>com.API_Testing.TestCasesScripts.TC_08_CompareJSonTwoFile</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
