rearrange the project structure

--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -33,7 +33,7 @@
 	at org.codehaus.groovy.runtime.ScriptBytecodeAdapter.createMap(ScriptBytecodeAdapter.java:635)
 	at io.restassured.internal.ResponseParserRegistrar.&lt;init&gt;(ResponseParserRegistrar.groovy)
 	at io.restassured.RestAssured.&lt;clinit&gt;(RestAssured.java:346)
-	at com.API_Testing.TestStep_HTTP_Methods.HTTP_Methods.post_Request(HTTP_Methods.java:30)
+	at com.API_Testing.commoncontrollers.HTTP_Methods.post_Request(HTTP_Methods.java:30)
 	at com.API_Testing.TestCasesScripts.TC_01_PostMethods.createData(TC_01_PostMethods.java:54)
 	at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:103)
 	at java.base/java.lang.reflect.Method.invoke(Method.java:580)
