--- a/test-output/Default suite/Default test.html
+++ b/test-output/Default suite/Default test.html
@@ -97,7 +97,7 @@ function toggleAllBoxes() {
 	at org.codehaus.groovy.runtime.ScriptBytecodeAdapter.createMap(ScriptBytecodeAdapter.java:635)
 	at io.restassured.internal.ResponseParserRegistrar.&lt;init&gt;(ResponseParserRegistrar.groovy)
 	at io.restassured.RestAssured.&lt;clinit&gt;(RestAssured.java:346)
-	at com.API_Testing.TestStep_HTTP_Methods.HTTP_Methods.post_Request(HTTP_Methods.java:30)
+	at com.API_Testing.commoncontrollers.HTTP_Methods.post_Request(HTTP_Methods.java:30)
 	at com.API_Testing.TestCasesScripts.TC_01_PostMethods.createData(TC_01_PostMethods.java:54)
 	at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:103)
 	at java.base/java.lang.reflect.Method.invoke(Method.java:580)
@@ -155,7 +155,7 @@ Caused by: java.lang.ExceptionInInitializerError: Exception java.lang.NoClassDef
 	at org.codehaus.groovy.runtime.ScriptBytecodeAdapter.createMap(ScriptBytecodeAdapter.java:635)
 	at io.restassured.internal.ResponseParserRegistrar.&lt;init&gt;(ResponseParserRegistrar.groovy)
 	at io.restassured.RestAssured.&lt;clinit&gt;(RestAssured.java:346)
-	at com.API_Testing.TestStep_HTTP_Methods.HTTP_Methods.post_Request(HTTP_Methods.java:30)
+	at com.API_Testing.commoncontrollers.HTTP_Methods.post_Request(HTTP_Methods.java:30)
 	at com.API_Testing.TestCasesScripts.TC_01_PostMethods.createData(TC_01_PostMethods.java:54)
 	at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:103)
 	at java.base/java.lang.reflect.Method.invoke(Method.java:580)
