Update test cases and methods file.

--- a/APITestReport/Suite/Test.html
+++ b/APITestReport/Suite/Test.html
@@ -75,10 +75,10 @@ function toggleAllBoxes() {
 <td><b>Instance</b></td>
 </tr>
 <tr>
-<td title='com.API_Testing.TestCasesScripts.testng.TC_08_CompareJSonTwoFile.comparetoJson()'><b>comparetoJson</b><br>Test class: com.API_Testing.TestCasesScripts.testng.TC_08_CompareJSonTwoFile</td>
+<td title='com.API_Testing.TestCasesScripts.testng.TestCompareTwoJsonFile.comparetoJson()'><b>comparetoJson</b><br>Test class: com.API_Testing.TestCasesScripts.testng.TestCompareTwoJsonFile</td>
 <td></td>
 <td>0</td>
-<td>com.API_Testing.TestCasesScripts.testng.TC_08_CompareJSonTwoFile@2f943d71</td></tr>
+<td>com.API_Testing.TestCasesScripts.testng.TestCompareTwoJsonFile@2f943d71</td></tr>
 <tr>
 <td title='com.API_Testing.TestCasesScripts.TC_01_PostMethods.createData()'><b>createData</b><br>Test class: com.API_Testing.TestCasesScripts.TC_01_PostMethods</td>
 <td></td>
