--- a/APITestReport/index.html
+++ b/APITestReport/index.html
@@ -104,7 +104,7 @@
                     <div class="method-list-content passed suite-Suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.API_Testing.TestCasesScripts.testng.TC_08_CompareJSonTwoFile" hash-for-method="comparetoJson">comparetoJson</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.API_Testing.TestCasesScripts.testng.TestCompareTwoJsonFile" hash-for-method="comparetoJson">comparetoJson</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -382,7 +382,7 @@
           <div class="suite-Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.API_Testing.TestCasesScripts.testng.TC_08_CompareJSonTwoFile</span>
+              <span class="class-name">com.API_Testing.TestCasesScripts.testng.TestCompareTwoJsonFile</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
@@ -411,7 +411,7 @@
       &lt;class name=&quot;com.API_Testing.TestCasesScripts.TC_03_PUTRequest&quot;/&gt;
       &lt;class name=&quot;com.API_Testing.TestCasesScripts.TC_04_PatchRequest&quot;/&gt;
       &lt;class name=&quot;com.API_Testing.TestCasesScripts.TC_05_DeleteRequestData&quot;/&gt;
-      &lt;class name=&quot;com.API_Testing.TestCasesScripts.testng.TC_08_CompareJSonTwoFile&quot;/&gt;
+      &lt;class name=&quot;com.API_Testing.TestCasesScripts.testng.TestCompareTwoJsonFile&quot;/&gt;
       &lt;class name=&quot;com.API_Testing.TestCasesScripts.TC_06_GetALLData&quot;/&gt;
       &lt;class name=&quot;com.API_Testing.TestCasesScripts.testng.TC_07_GetDatabyKey&quot;/&gt;
     &lt;/classes&gt;
@@ -520,7 +520,7 @@ data.setCell(15, 2, 'com.API_Testing.TestCasesScripts.TC_04_PatchRequest')
 data.setCell(15, 3, 36);
 data.setCell(16, 0, 16)
 data.setCell(16, 1, 'comparetoJson')
-data.setCell(16, 2, 'com.API_Testing.TestCasesScripts.testng.TC_08_CompareJSonTwoFile')
+data.setCell(16, 2, 'com.API_Testing.TestCasesScripts.testng.TestCompareTwoJsonFile')
 data.setCell(16, 3, 19);
 data.setCell(17, 0, 17)
 data.setCell(17, 1, 'fetchValuedata')
@@ -775,7 +775,7 @@ return data;
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
-              <div class="chronological-class-name">com.API_Testing.TestCasesScripts.testng.TC_08_CompareJSonTwoFile</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.API_Testing.TestCasesScripts.testng.TestCompareTwoJsonFile</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">comparetoJson</span>
                 <span class="method-start">4893 ms</span>
