--- a/APITestReport/old/Suite/classes.html
+++ b/APITestReport/old/Suite/classes.html
@@ -160,7 +160,7 @@
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
 <tr>
-<td>com.API_Testing.TestCasesScripts.testng.TC_08_CompareJSonTwoFile</td>
+<td>com.API_Testing.TestCasesScripts.testng.TestCompareTwoJsonFile</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
