--- a/APITestReport/old/Suite/methods-alphabetical.html
+++ b/APITestReport/old/Suite/methods-alphabetical.html
@@ -1,7 +1,7 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6796d9">  <td>20/06/01 20:01:14</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_08_CompareJSonTwoFile.comparetoJson()[pri:0, instance:com.API_Testing.TestCasesScripts.testng.TC_08_CompareJSonTwoFile@2f943d71]">comparetoJson</td> 
+<tr bgcolor="6796d9">  <td>20/06/01 20:01:14</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_08_CompareJSonTwoFile.comparetoJson()[pri:0, instance:com.API_Testing.TestCasesScripts.testng.TestCompareTwoJsonFile@2f943d71]">comparetoJson</td>
   <td>main@681384962</td>   <td></td> </tr>
 <tr bgcolor="9ba398">  <td>20/06/01 20:01:09</td>   <td>-4880</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_01_PostMethods.createData()[pri:0, instance:com.API_Testing.TestCasesScripts.TC_01_PostMethods@76b0bfab]">createData</td> 
   <td>main@681384962</td>   <td></td> </tr>
